Spacing bug on home page

--- a/css/style.css
+++ b/css/style.css
@@ -426,15 +426,6 @@ font-family: 'Crimson Text', serif;
 	}
 }
 
-@media screen and (min-width: 768px) {
-	#home-page-content {
-		margin: 0px 10%;
-	}
-}
-@media screen and (min-width: 1250px) {
-	#home-page {
-	}
-}
 
 /*Opaque square over background image*/
 #opaque-contact-page-layer {
@@ -454,10 +445,6 @@ font-family: 'Crimson Text', serif;
 	}
 }
 
-@media screen and (min-width: 768px) {
-	#opaque-contact-page-layer {
-	}
-}
 @media screen and (min-width: 1250px) {
 	#opaque-contact-page-layer {
 		margin-top: 130px;
